# marek-onpc.github.io

./: .dockerignore  404.html  Dockerfile  README.md  asset-manifest.json  index.html  main.py  pyproject.toml  requirements.txt  start.sh
_app/: env.js  version.json
adapter/: authorization_adapter.py  login_adapter.py  note_adapter.py
api/: authpath.py  login.py  note.py  notes.py
architecture/: architecture.excalidraw  cheat-sheet.excalidraw
auth/: authentication.py
client/: package.json  svelte.config.js
db/: db_client.py
domain/: authorization_domain.py  login_domain.py
new-client/: package-lock.json  package.json
schemas/: schemas.py
server/: .gitignore  Makefile  main.py  pyproject.toml  schemas.py
server/adapter/: cheat_sheet_adapter.py  login_adapter.py  note_adapter.py  project_adapter.py  user_adapter.py
server/db/: db_client.py
server/domain/: cheat_sheet_domain.py  login_domain.py  logs_domain.py  note_domain.py  project_domain.py
server/helpers/: authentication.py  db_client.py  events.py  serializers.py
server/schemas/: schemas.py
server/tests/: test_authentication.py  test_cheat_sheet.py  test_db_client.py  test_notes.py  test_project.py
server/tests/domain/: test_cheat_sheet_domain.py  test_login_domain.py  test_logs_domain.py
server/tests/helpers/: test_authentication.py  test_db.py  test_serializers.py
server/tests/view/: test_cheat_sheet_view.py  test_login_view.py  test_logs_view.py
server/view/: cheat_sheet_view.py  login_view.py  logs_view.py  note_view.py  project_view.py
test/: test_authentication.py
(+504 files in other folders)
