[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Marek Smieja <67819687+marek-onPC@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
mongomock = "^4.1.2"
pytest = "^8.2.2"
pymongo = "^4.7.3"
PyJWT = "^2.8.0"
passlib = "^1.7.4"
bcrypt = "4.0.1"
uvicorn = "^0.30.6"
gunicorn = "^23.0.0"
isort = "^5.13.2"
black = "^24.10.0"
mypy = "^1.14.1"
types-passlib = "^1.7.7.20241221"
flake8 = "^7.1.1"
httpx = "^0.28.1"
pytest-cov = "^7.0.0"
coverage = "^7.10.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report term --cov-fail-under 96"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
